<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="login_app_name">login</string>


    <!-- 登录注册 -->
    <string name="login_register">注册帐号</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login_open_new_data_manage">开启新一代数据化管理方式</string>


    <string name="login_please_input_company_name">请输入公司名称（必填）</string>
    <string name="login_please_input_name">请输姓名（必填）</string>
    <string name="login_please_input_pwd">输入登录密码（必填）</string>
    <string name="login_please_input_invite_code">输入邀请码（非必填）</string>

    <string name="login_qq_login">QQ登录</string>
    <string name="login_invite_code_login">邀请码登录</string>
    <string name="login_please_input_verification_code">请输入验证码</string>
    <string name="login_input_new_pwd">请输入新密码（必填）</string>
    <string name="login_repeat_new_pwd">请重复新密码（必填）</string>
    <string name="login_system">登录系统</string>
    <string name="login_failed">登录失败</string>
    <string name="login_next_step_agree">点击下一步，即同意</string>
    <string name="login_register_agreement">《服务条款》</string>
    <string name="login_confirm_and_login">确定并登录</string>

    <string name="login_get_verification_code">获取验证码</string>
    <string name="login_please_enter_correct_phone">手机号码格式不正确！</string>
    <string name="login_please_input_phone">请输入手机号码！</string>
    <string name="login_please_input_password">请输入密码！</string>
    <string name="login_please_enter_correct_password">密码格式不正确！</string>
    <string name="login_please_enter_correct_verify_code">验证码格式不正确！</string>
    <string name="login_find_pwd">找回密码</string>


    <string name="login_copy_right">copyright © 2018 Teamface</string>
    <string name="login_please_input_phonenumber">请输入手机号</string>
    <string name="login_input_phonenumber">输入手机号</string>
    <string name="login_input_verify">输入验证码</string>
    <string name="login_please_input_login_pwd">请输入登录密码</string>
    <string name="login_please_input_login_verify">请输入验证码</string>
    <string name="login_term_sign">密码过期,请修改密码</string>
    <string name="login_register_hint">感谢您的注册！相关同事将会对您的信息进行审核，审核通过后会以短信的形式通知到您。</string>
    <string name="loginsetting_please_input_ip">请输入访问ip地址</string>
    <string name="loginsetting_title">私有部署服务器</string>
    <string name="loginsetting_delete">删除</string>
    <string name="loginsetting_delete_ip">确定删除本地IP吗?</string>
    <string name="loginsetting_remenber_ip">记住地址</string>
    <string name="loginsetting_input_example">例如 : http://192.168.1.181:8093</string>


</resources>
