<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/company_et"
            style="@style/login_inputPhone"
            android:hint="@string/login_please_input_company_name"
            tools:text="" />

        <EditText
            android:id="@+id/name_et"
            style="@style/login_inputPhone"
            android:hint="@string/login_please_input_name"
            tools:text="" />

        <EditText
            android:id="@+id/pwd_et"
            style="@style/login_inputPhone"
            android:hint="@string/login_please_input_pwd"
            tools:text="" />

        <EditText
            android:id="@+id/invite_et"
            style="@style/login_inputPhone"
            android:hint="@string/login_please_input_invite_code"
            tools:text=""
            android:visibility="gone"/>


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_selector_btn_green"
            android:gravity="center"
            android:text="@string/login_system"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>
</FrameLayout>